--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -25,6 +25,8 @@ $font-family: 'Inter';
 @import 'theme/refresh';
 @import 'theme/table';
 @import 'theme/select';
-@import 'theme/datepicker';
+@import 'theme/calendar';
+@import 'theme/timepicker';
+@import 'theme/popper';
 
 @import 'theme/family';
