--- a/resources/scss/bootstrap/icons/styles.scss
+++ b/resources/scss/bootstrap/icons/styles.scss
@@ -113,3 +113,12 @@
 .icon-check:before {
   content: "\79";
 }
+.icon-comment:before {
+  content: "\7a";
+}
+.icon-download:before {
+  content: "\41";
+}
+.icon-search:before {
+  content: "\42";
+}
