--- a/resources/scss/theme/editor.scss
+++ b/resources/scss/theme/editor.scss
@@ -1,25 +1,24 @@
-.editor {
-  &__content {
+.editor__content,
+.editor-output {
     strong {
-      @apply font-semibold;
+        @apply font-semibold;
     }
 
     em {
-      @apply italic;
+        @apply italic;
     }
 
     ol {
-      list-style: decimal;
+        list-style: decimal;
     }
 
     ul {
-      list-style: disc;
+        list-style: disc;
     }
 
     ol, ul {
-      margin-left: 30px;
+        margin-left: 30px;
     }
-  }
 }
 
 .ProseMirror {
